# Invaders_Reinc

./: .gitignore  .gitmodules  CMakeLists.txt  Geometry.h  README.md  Viktor_classes  Work.docx  gtest_windows_mingw_patch.diff
data/styles/: default.qss
data/translations/: en.ts  ru.qm  ru.ts
src/: Geometry.h  box2d.hpp  constants.cpp  constants.hpp  dummy.cpp  dummy.hpp  game_widget.cpp  game_widget.hpp  game_window.cpp  game_window.hpp  gl_widget.cpp  gl_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  point2d.hpp  ray2d.hpp  window_constants.cpp  window_constants.hpp  window_labels.hpp
src/gameclasses/: LifeGameEntity.hpp  alien.hpp  alienmanager.hpp  bullet.hpp  bulletmanager.hpp  constants.cpp  constants.hpp  factory.hpp  gameEntity.hpp  gameentity.hpp  gun.hpp  lifegameentity.hpp  logger.hpp  movable.hpp  moveEntity.hpp  movedgameentity.hpp  obstacle.hpp  obstaclemanager.hpp  ship.hpp  singleton.hpp  space.hpp
src/gameclasses/geometry/: box2d.hpp
tests/: box2d_test.cpp  dummy_test.cpp  point2d_test.cpp  ray2d_test.cpp
tests/gameclasses_tests/: alien2d_test.cpp  alien2dmanager_test.cpp  bullet2d_test.cpp  bullet2dmanager_test.cpp  gamelogic_test.cpp  gamentity2d_test.cpp  gun2d_test.cpp  lifegamentity2d_test.cpp  logger2d_test.cpp  movedgamentity2d_test.cpp  obstacle2d_test.cpp  obstacle2dmanager_test.cpp  patterns_test.cpp  ship2d_test.cpp  space2d_test.cpp
